<resources>
    <!-- String dùng toàn cục -->
    <string name="app_name">Health Care</string>

    <!--String dung cho navagationr content UI-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String dùng cho Nav UI-->
    <string name="nav_home">Trang Chủ</string>
    <string name="nav_feature">Chức năng</string>
    <string name="nav_work_schedule">Lịch làm việc</string>
    <string name="nav_patient_list">Danh sách đặt khám</string>
    <string name="nav_communicate">Liên hệ</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_logout">Đăng Xuất</string>

    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_login">Đăng nhập</string>

    <!--String dùng cho registe UI -->
    <!--<string name="register_header">Đăng Kí</string>-->
    <string name="submit_register_action">Đăng Kí</string>
    <string name="register_name">Họ tên</string>
    <string name="register_user_name">Tên tài khoản</string>
    <string name="register_password">Mật khẩu</string>
    <string name="register_confirm_password">Xác nhận mật khẩu</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Số điện thoại</string>
    <string name="register_birth_day">Ngày sinh</string>
    <string name="register_passport">Hộ chiếu</string>
    <string name="register_speciality">Chuyên ngành</string>
    <string name="register_degree">Bằng cấp</string>
    <string name="register_experience">Kinh nghiệm</string>
    <string name="register_doctor_address">Địa chỉ thường trú</string>
    <string name="register_return_login_action">Quay Lại Đăng Nhập</string>
    <string name="register_error_invalid_user_name">Tên tài khoản phải từ 6 kí tự trở lên</string>
    <string name="register_error_invalid_email">Email không hợp lệ</string>
    <string name="register_error_field_required">Thông tin còn thiếu</string>
    <string name="register_error_invalid_password">Mật khẩu phải từ 4 kí tự trở lên</string>
    <string name="register_error_invalid_confirm_password">Mật khẩu không trùng</string>
    <string name="register_error_invalid_phone">Số điện thoại không hợp lệ</string>
    <string name="register_error_invalid_experience">Năm kinh nghiệm không hợp lệ</string>
    <string name="register_success_messages">Đăng kí tài khoản thành công. Thông tin sẽ được kiểm chứng và sẽ được thông báo qua email khi tài khoản được kích hoạt.</string>
    <string name="register_close_dialog">Đóng</string>
    <!--String dùng cho setting UI-->
    <string name="setting_header">Cài Đặt</string>
    <string name="setting_change_info_action">Chỉnh sửa thông tin cá nhân</string>
    <string name="setting_change_name_action">Thay đổi họ tên</string>
    <string name="setting_change_email">Thay đổi email</string>
    <string name="setting_change_name">Thay đổi họ tên</string>
    <string name="setting_change_phone">Thay đổi số điện thoại</string>
    <string name="setting_change_birthdate">Thay đổi ngày sinh</string>
    <string name="setting_change_address">Thay đổi địa chỉ</string>
    <string name="setting_change_degree">Thay đổi bằng cấp</string>
    <string name="setting_change_speciality">Thay đổi chuyên ngành</string>
    <string name="setting_change_experience">Thay đổi kinh nghiệm</string>
    <string name="setting_confirm_password">Nhập mật khẩu để thay </string>
    <string name="setting_change_passport">Thay đổi passport</string>
    <string name="setting_change_password_action">Thay đổi mật khẩu</string>
    <string name="setting_confirm_change_password_action">Xác nhận</string>
    <string name="setting_confirm_change_info">Xác nhận thay đổi thông tin</string>
    <string name="setting_new_password">Mật khẩu mới</string>
    <string name="setting_confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="setting_old_password">Mật khẩu cũ</string>

    <!--String dung cho register work schedule UI-->
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string-array name="dates_list">
        <item>Thứ 2</item>
        <item>Thứ 3</item>
        <item>Thứ 4</item>
        <item>Thứ 5</item>
        <item>Thứ 6</item>
        <item>Thứ 7</item>
        <item>Chủ Nhật</item>
    </string-array>

    <string-array name="times_list">
        <item>Buổi Sáng (7h - 11h)</item>
        <item>Buổi Trưa (12h - 17h)</item>
        <item>Buổi Tối (18h - 22h)</item>
    </string-array>

    <string name="times_morning">Buổi Sáng (7h - 11h)</string>
    <string name="times_afternoon">Buổi Trưa (12h - 17h)</string>
    <string name="times_night">Buổi Tối (18h - 22h)</string>
    <!-- String dùng cho sign in UI -->
    <string name="login_hint_user_name">Tài khoản</string>
    <string name="login_hint_password">Mật khẩu</string>
    <string name="login_submit_action">Đăng Nhập</string>
    <string name="login_error_invalid_user_name">Tên đăng nhập phải từ 6 kí tự trở lên</string>
    <string name="login_error_invalid_password">Mật khẩu phải từ 4 kí tự trở lên</string>
    <string name="login_error_incorrect_password">Sai mật khẩu</string>
    <string name="error_field_required">Thông tin còn thiếu</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--String cho forget pass UI-->
    <string name="forget_password_action">Lấy lại mật khẩu</string>
    <string name="forget_password_header">Lấy Lại Mật Khẩu</string>
    <string name="forget_password_submit_action">Xác nhận</string>
    <string name="forget_password_email">Email</string>
    <string name="title_activity_register">Đăng Kí</string>


</resources>
