<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_feature">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_work_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/nav_work_schedule" />
        <item
            android:id="@+id/nav_patient_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_patient_list" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="Tin Nhắn" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_communicate"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/nav_communicate" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="Thông Tin" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/nav_logout" />
    </group>
    </item>

</menu>
